2004-05-01 rivo nurges <rix@estpak.ee>
 
        * bgp_route.c: fix UNH IOL BGP-4.1.12f
 
2004-05-01 Paul Jakma <paul@dishone.st>

	* Revert the attempted clean-up of the dummy peer hack, reverts
	  patchsets 435 (see 2004-02-17 below) and 456. 

2004-04-16 rivo nurges <rix@estpak.ee>

	* bgpd.h, bgp_debug.c: update cease subcodes to
	  draft-ietf-idr-cease-subcode-05
	* bgpd.h, bgpd.c, bgp_route.c, bgp_route.h: fix UNH IOL BGP-4.1.6a

2004-02-17 Paul Jakma <paul@dishone.st>

	* bgpd.h: (bgp_peer) add fd_local and fd_accept 
	  file descriptor's, fd becomes a pointer to one of these.
	* bgpd.c: (global) adjust for fact that fd is now a pointer.
	  (peer_create_accept) removed.
	* bgp_route.c: (global) adjust for change of peer fd to pointer
	* bgp_packet.c: (bgp_collision_detect) adjust and remove the 
	  "replace with other peer" hack. 
	* bgp_network.c: (bgp_accept) Remove the dummy peer hack. 
	  Update peer->fd_accept instead. 
	  (global) Adjust fd references - now a pointer.
	* bgp_fsm.c: (global) adjust peer fd to pointer.
	  (bgp_connection_stop) new function, to stop connection.
	  (global) adjust everything which closed peer fd to use
	  bgp_connection_stop().
	  
2003-12-23 Krzysztof Oledzki <oleq@ans.pl>

	* bgp_network.c: drop privs on error cases

2003-08-11 kunihiro <kunihiro@zebra.org>

	* bgp_route{,map}.c: Extend 'set ip next-hop' in route-maps with
	  ability to specify 'peer-address' rather than IP. 

2003-06-09 Paul Jakma <paul@dishone.st>

	* bgp_clist.c (community_list_delete): honour deny statements

2003-04-19 Hasso Tepper <hasso@estpak.ee>

	* rip_routemap.c: sync daemon's route-map commands to have same
	syntax

2003-01-09  Akihiro Mizutani <mizutani@net-chef.net>

	* bgp_routemap.c: Add match extcommunity command.

2002-10-23  Kunihiro Ishiguro  <kunihiro@ipinfusion.com>

	* bgp_aspath.c (aspath_init): Extend hash size from default to
	32767.
	(aspath_key_make): Use unsigned shoft for making hash.  Suggested