@@ -1,3 +1,9 @@
+2004-05-03 Daniel Roesen <dr@cluenet.de>
+	
+	* bgp_fsm.c: (bgp_stop) Reset uptime only on transition from 
+	  Established so that it reflects true downtime (rather time 
+	  since last transition, eg Active->Idle)
+	  
 2004-05-01 rivo nurges <rix@estpak.ee>
  
         * bgp_route.c: fix UNH IOL BGP-4.1.12f
